--- a/index.html
+++ b/index.html
@@ -396,7 +396,23 @@
         </div>
 
         <div class="appliWrapper" id="app1">
-    
+            <div class="wrapper" id="wrapper_F"></div>
+        <div class="controls" id="controls_F">    
+            <div class="controlBtn" id="CUT_F">CUT</div>
+            <div class="controlBtn" id="CLEAR_F">CLEAR</div>
+            <div class="controlBtn" id="PRINT_F">PRINT</div>
+            <div class="controlBtn" id="WASH_F">WASH</div>
+        </div>
+
+        <p class="memoryType">short term memory</p>
+        <div class="memory" id="STM_F"></div>
+        <p class="memoryType">long term memory</p>
+        <div class="memory" id="LTM_F"></div>
+
+        <div class="output" id="PRINTER_F"></div>
+        <div class="controls">
+            <div class="controlBtn" id="ZOOMIN">ZOOM IN</div>
+            <div class="controlBtn" id="ZOOMOUT">ZOOM OUT</div>
         </div>
 
     </section>
