--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
         <div id="progWow">
             <img src="pics/back.jpg">
-            <div class="cover"></div>
+            <div class="cover"><a href="http://graphieros.atwebpages.com/composer.html" target="_blank">COMPO</a></div>
         </div>
         
 
