--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-65449763-1"></script>
-    <script>
+    <script> 
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
@@ -384,6 +384,7 @@
             <div class="devMenu" id="devMenu0">tracer un glyphe</div>
             <div class="devMenu" id="devMenu1">écrire en graphieros fractal</div>
             <div class="devMenu" id="devMenu2">écrire en graphieros linéaire</div>
+            <a href="http://graphieros.atwebpages.com/composer.html" target="_blank"><div class="devMenu" id="devMenu3">...des paragraphes entiers</div></a>
         </div>
 
         <div id="progWow">
