--- a/composer.html
+++ b/composer.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="css/composer.css" class="css">
 </head>
 
-<body>
+<body> 
 
   <section id="main_wrapper_molecular">
     
@@ -32,6 +32,9 @@
         <div class="choice" id="choice1">DOUBLE LINEAR</div>
         <div class="choice" id="choice2">MOLECULAR</div>
         <div class="choice" id="choice3">FREE</div>
+      </div>
+      <div id="dic">
+        <a href="http://graphieros.atwebpages.com/php/glyphs.php" target="_blank"><p id="dicLink">GLYPH LIST</p></a>
       </div>
       <p id="move">the palette is draggable &#128540;</p>
       <div id="hexWrap" draggable="true">
