--- a/composer.html
+++ b/composer.html
@@ -28,10 +28,10 @@
       <a href="http://graphieros.atwebpages.com" target="_blank"><span class="credit1">
         <span class="green">A</span>le<span class="tomato">C</span> Lloy<span class="gold">D</span> Pro<span class="corn">B</span>ert</span></a></div>
       <div class="choices">
-        <div class="choice" id="choice0">LINEAR</div>
-        <div class="choice" id="choice1">DOUBLE LINEAR</div>
-        <div class="choice" id="choice2">MOLECULAR</div>
-        <div class="choice" id="choice3">FREE</div>
+        <div class="choice" id="choice0">LINE<span class="green">A</span>R</div>
+        <div class="choice" id="choice1">DOU<span class="corn">B</span>LE LINEAR</div>
+        <div class="choice" id="choice2">MOLE<span class="tomato">C</span>ULAR</div>
+        <div class="choice" id="choice3">FREE<span class="gold">D</span></div>
       </div>
       <div id="dic">
         <a href="http://graphieros.atwebpages.com/php/glyphs.php" target="_blank"><p id="dicLink">GLYPH LIST</p></a>
