--- a/composer.html
+++ b/composer.html
@@ -37,13 +37,8 @@
         <a href="http://graphieros.atwebpages.com/php/glyphs.php" target="_blank"><p id="dicLink">GLYPH LIST</p></a>
       </div>
       <p id="move">the palette is draggable &#128540;</p>
-      <!-- <div id="paletteWrapper">
-        <div class="colorPalette" id="cp0"></div>
-        <div class="colorPalette" id="cp1"></div>
-        <div class="colorPalette" id="cp2"></div>
-        <div class="colorPalette" id="cp3"></div>
-        <div class="colorPalette" id="cp4"></div>
-      </div> -->
+      <p id="style">toggle style:</p>
+      <div id="toggle">ROBOT</div>
       <div id="hexWrap" draggable="true">
       
         <div class="hexagon" id="center">
