--- a/composer.html
+++ b/composer.html
@@ -50,6 +50,11 @@
             <div id="div_B"><input type="number" id="CS_B" placeholder="B"></div>
           </div>
           <div id="colorResult"></div>
+          <div class="ABC">
+            <div class="choice" id="choiceA"><span class="green">A</span></div>
+            <div class="choice" id="choiceB"><span class="corn">B</span></div>
+            <div class="choice" id="choiceC"><span class="tomato">C</span></div>
+          </div>
         </div>
 
       </div>
