--- a/composer.html
+++ b/composer.html
@@ -44,16 +44,20 @@
         <div id="toggle2">LINE</div>
 
         <div class="colorSpex">
-          <div>
+          <div id="colorSpexGrid">
             <div id="div_R"><input type="number" id="CS_R" placeholder="R"></div>
+            <div class="randomColor" id="randomR">R</div>
             <div id="div_G"><input type="number" id="CS_G" placeholder="G"></div>
+            <div class="randomColor" id="randomG">G</div>
             <div id="div_B"><input type="number" id="CS_B" placeholder="B"></div>
+            <div class="randomColor" id="randomB">B</div>
           </div>
           <div id="colorResult"></div>
           <div class="ABC">
             <div class="choice" id="choiceA"><span class="green">A</span></div>
             <div class="choice" id="choiceB"><span class="corn">B</span></div>
             <div class="choice" id="choiceC"><span class="tomato">C</span></div>
+            <div id="structName"></div>
           </div>
         </div>
 
