--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Poiret+One&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="../pics/favicon.ico">
 
-    <title>Alec Lloyd Probert</title>
+    <title>Alec Lloyd Probert</title> 
 
     <meta name="description" content="Artiste, business analyst, programmeur et créateur de l'idéolangue graphieros. Bio, peintures, journal, livres..." />
     <meta name="google-site-verification" content="3M0g0CGwhq36_jRupfc2k3hDyDAWmfFAAItyW-b9IjM" />
@@ -42,6 +42,7 @@
             <div id="XballCross0" class="XballCross"></div>
             <div id="XballCross1" class="XballCross"></div>
         </div>
+        <a href="pensees.html"><div id="menuBallBlog" class="menuBall">BLOG</div></a>
         <div id="menuBall0" class="menuBall">BIO</div>
         <div id="menuBall1" class="menuBall">IDEO</div>
         <a href="cle.html" target="_blank"><div id="menuBallGraphieros" class="menuBall"><svg class="svgCle" viewbox="0 0 120 110"><path d="M 38,18,42,22,38,87,42,91,38,18,42,22" style="stroke:rgb(255,255,255); fill:rgb(255,255,255);"/><path d="M 58,53,62,57,38,87,42,91,58,53,62,57" style="stroke:rgb(255,255,255); fill:rgb(255,255,255);"/><path d="M 98,53,102,57,18,53,22,57,98,53,102,57,78,87,82,91,98,53,102,57" style="stroke:rgb(255,255,255); fill:rgb(255,255,255);"/><path d="M 80,20,80,20" style="stroke:rgb(255,255,255); stroke-width:8px;"/></svg></div></a>
