--- a/composer.html
+++ b/composer.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-65449763-1"></script>
-  <script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-65449763-3"></script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-65449763-1');
-  </script>
+  gtag('config', 'UA-65449763-3');
+</script>
+
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>graphieros composer</title>
@@ -25,7 +27,7 @@
       
       <div class="composer_title">GRAPHIEROS COMPOSER<br>
       <span class="credit0">by</span><br>
-      <a href="http://graphieros.atwebpages.com" target="_blank"><span class="credit1">
+      <a href="https://graphieros.com" target="_blank"><span class="credit1">
         <span class="green">A</span>le<span class="tomato">C</span> Lloy<span class="gold">D</span> Pro<span class="corn">B</span>ert</span></a></div>
       <div class="choices">
         <div class="choice" id="choice0">LINE<span class="green">A</span>R</div>
@@ -34,7 +36,7 @@
         <div class="choice" id="choice3">FREE<span class="gold">D</span></div>
       </div>
       <div id="dic">
-        <a href="http://graphieros.atwebpages.com/php/glyphs.php" target="_blank"><p id="dicLink">GLYPH LIST</p></a>
+        <a href="https://graphieros.com/php/glyphs.php" target="_blank"><p id="dicLink">GLYPH LIST</p></a>
       </div>
       <p id="move">the palette is draggable &#128540;</p>
       
