--- a/pensees.html
+++ b/pensees.html
@@ -13,6 +13,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Le blog d'Alec Lloyd Probert en 4 sections originales !">
     <link rel="stylesheet" href="css/pensees.css" class="css">
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Poiret+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@700;900&display=swap" rel="stylesheet">
