--- a/gwriter/gwriter.html
+++ b/gwriter/gwriter.html
@@ -35,6 +35,10 @@
         <div class="toggle_color">
             <div id="toggle">0</div>
             <div id="info">i</div>
+            <textarea maxlength="3" class="color_select" id="R" placeholder="R" oninput="make_color()"></textarea>
+            <textarea maxlength="3" class="color_select" id="G" placeholder="G" oninput="make_color()"></textarea>
+            <textarea maxlength="3" class="color_select" id="B" placeholder="B" oninput="make_color()"></textarea>
+            <div id="color_result"></div>
         </div>
     </div>
     <!--for when I find a way to simulate key events with buttons without duplicating my js-->
