--- a/gwriter/gwriter.html
+++ b/gwriter/gwriter.html
@@ -13,6 +13,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ecrivez en graphieros avec votre clavier physique !" />
     <title>Graphieros writer</title>
     <link rel="stylesheet" href="gwriter.css" class="css">
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Poiret+One&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
     </a>
     
 
-    <p>Ecrivez en graphieros en tapant les glyphes par leur phonologie (sans les points) ou par leur traduction en français. Pour commencer, tapez par exemple _ka (car il faut préfacer la phonologie avec un <u>underscore</u>), ou tapez <i>humain</i> (pas besoin d'underscore si vous écrivez en français), et appuyez sur ENTER.<br><br>Retrouvez la liste des glyphes du graphieros <a href="https://graphieros.com/php/glyphs.php" target="_blank">en cliquant ici</a>, et apprenez le graphieros en lisant <a href="https://graphieros.com/lacle2.pdf" target="_blank">la clé</a>!<br><br><span class="c">Cette application fonctionne<br>avec un clavier physique.</span><br><br>
+    <p><span class="tit">Graphieros Writer</span><br><br>Ecrivez en graphieros en tapant les glyphes par leur phonologie (sans les points) ou par leur traduction en français. Pour commencer, tapez par exemple _ka (car il faut préfacer la phonologie avec un <u>underscore</u>), ou tapez <i>humain</i> (pas besoin d'underscore si vous écrivez en français), et appuyez sur ENTER.<br><br>Retrouvez la liste des glyphes du graphieros <a href="https://graphieros.com/php/glyphs.php" target="_blank">en cliquant ici</a>, et apprenez le graphieros en lisant <a href="https://graphieros.com/lacle2.pdf" target="_blank">la clé</a>!<br><br><span class="c">Cette application fonctionne<br>avec un clavier physique.</span><br><br>
     Vous pouvez sélectionner la couleur des glyphes en indiquant les niveaux de 0 à 255 pour le rouge, le vert et le bleu, avant d'écrire le glyphe.</p>
     <div class="controls">
         <div class="toggle_color">
