--- a/gwriter/gwriter.html
+++ b/gwriter/gwriter.html
@@ -42,7 +42,7 @@
             <textarea maxlength="3" class="color_select" id="B" placeholder="B" oninput="make_color()"></textarea>
             <div id="color_result"></div>
         </div>
-    </div>
+    </div> 
     <!--for when I find a way to simulate key events with buttons without duplicating my js-->
     <!-- <div class="touch_controls">
         <div class="tcc">
@@ -63,6 +63,7 @@
     </div>
     
     <div id="trad"></div>
+    <div id="search"></div>
     
     <div class="end"></div>
     <script src="gwriter.js"></script>
