--- a/gwriter/gwriter.html
+++ b/gwriter/gwriter.html
@@ -74,6 +74,7 @@
         <source src="key_type2.mp3">
     </audio>
     <div id="mute">son<br>OFF</div>
+    <div id="eraser">DESTROY</div> <!--&#128520;-->
     <div class="end"></div>
     <script src="gwriter.js"></script>
 </body>
