--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  gtag('js', new Date()); 
 
   gtag('config', 'UA-65449763-3');
-</script>
+</script> 
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,11 +19,13 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/linear.css">
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Poiret+One&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="32x32" href="../pics/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="../pics/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="../pics/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../pics/favicon-32x32.png">
 
     <title>Alec Lloyd Probert</title> 
 
-    <meta name="description" content="Artiste, business analyst, programmeur et créateur de l'idéolangue graphieros. Bio, peintures, journal, livres..." />
+    <meta name="description" content="Artiste, data & business analyst, programmeur et créateur de l'idéolangue graphieros. Bio, peintures, journal, livres..." />
     <meta name="google-site-verification" content="3M0g0CGwhq36_jRupfc2k3hDyDAWmfFAAItyW-b9IjM" />
 
 </head>
@@ -49,6 +51,8 @@
         <div id="menuBall2" class="menuBall">GALERIE</div>
         <a href="journal.html" target="_blank"><div id="menuBallJournal" class="menuBall">JOURNAL</div></a>
         <div id="menuBall3" class="menuBall">DEV</div>
+        <a href="gwriter/gwriter.html"><div id="menuBallWriter" class="menuBall">WRITER</div></a>
+        <a href="fractal_gwriter/fractal_gwriter.html"><div id="menuBallFractalWriter" class="menuBall"><span class="spin">FRACTAL</span><br>WRITER</div></a>
     </section>
 
     <div id="LANDING"><span class="nA">A</span>le<span class="nC">C</span> Lloy<span class="nD">D</span> Pro<span class="nB">B</span>ert</div>
@@ -71,8 +75,8 @@
                 <br>
                 Bilingue anglais
                 <br><br>
-                <span class="blue">2011 - aujourd'hui</span> : Business Analyst, Laboratoires Cinq Mondes Paris
-                <br><span class="green">Analyse commerciale, programmation d'outils de reporting en ligne, programmation d'un progiciel de supply chain, révélation de nouveaux KPI propres au spa / retail</span>
+                <span class="blue">2011 - aujourd'hui</span> : Data & business analyst, Laboratoires Cinq Mondes Paris
+                <br><span class="green">Data analyse, Analyse commerciale, programmation d'outils de reporting en ligne, programmation d'un progiciel de supply chain, révélation de nouveaux KPI propres au spa / retail</span>
                 <br><br>
                 <span class="blue">2009 - aujourd'hui</span> : adjoint de la direction des opérations, Laboratoires Cinq Mondes Paris
                 <br>
@@ -85,14 +89,15 @@
             <div class="BIOcontent" id="SAVOIR">
                 Programmation
                 <br><span class="green">
-                    JavaScript, CSS, HTML, notions de PHP en lien avec MySQL.
+                    JavaScript, CSS, HTML, notions de PHP en lien avec MySQL, Python.
                     <br>
                     <a href="https://github.com/graphieros" target="_blank"><span class="gold">Consulter ma page GITHUB</span></a>
                 </span>
                 <br><br>
                 Maîtrise d'Excel
                 <br><span class="green">
-                    Création d'applications en VBA, formations en interne aux bonnes pratiques de programmation et de conception de tableaux fiables.
+                    Automatisation de tâches avec Python.<br>
+                    Création d'applications en VBA, formateur en interne aux bonnes pratiques de programmation et de conception de tableaux fiables.
                 </span>
                 <br><br>
                 Maîtrise de PowerPoint
@@ -292,7 +297,15 @@
                 </div>
             </div>
 
-            <div></div>
+            <div class="galeriePicWrapper">
+                <img src="pics/ile.jpg" class="galPic">
+                <div class="picCaption">
+                    'L'île bienheureuse'<br>
+                    Huile sur toile <br>
+                    81 x 65 cm <br>
+                    2018
+                </div>
+            </div>
 
             <div class="galeriePicWrapper"> 
                 <img src="pics/apresDemain.jpg" class="galPic">
