--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         <div id="menuBall2" class="menuBall">GALERIE</div>
         <a href="journal.html" target="_blank"><div id="menuBallJournal" class="menuBall">JOURNAL</div></a>
         <div id="menuBall3" class="menuBall">DEV</div>
-        <a href="gwriter/gwriter.html"><div id="menuBallWriter" class="menuBall">WRITER</div></a>
+        <a href="gwriter/gwriter.html"><div id="menuBallWriter" class="menuBall"><span class="spin">TYPE</span><br>WRITER</div></a>
         <a href="fractal_gwriter/fractal_gwriter.html"><div id="menuBallFractalWriter" class="menuBall"><span class="spin">FRACTAL</span><br>WRITER</div></a>
+        <a href="touch_writer/touch_writer.html"><div id="menuBallTouchWriter" class="menuBall"><span class="spin">TOUCH</span><br>WRITER</div></a>
     </section>
 
     <div id="LANDING"><span class="nA">A</span>le<span class="nC">C</span> Lloy<span class="nD">D</span> Pro<span class="nB">B</span>ert</div>
@@ -295,7 +296,7 @@
                     65 x 54 cm <br>
                     2020, confinement
                 </div>
-            </div>
+            </div> 
 
             <div class="galeriePicWrapper">
                 <img src="pics/ile.jpg" class="galPic">
