--- a/pensees.html
+++ b/pensees.html
@@ -18,6 +18,10 @@
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Poiret+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="../pics/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="../pics/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../pics/favicon-32x32.png">
     <title>Pensées</title>
 </head>
 <body>
@@ -37,10 +41,12 @@
         </div>
     </section>
 
+    
     <div class="homeContainer">
+        <a class="normLink" href="index.html">
         <div class="HOME" id="HOME">
             <a class="normLink" href="index.html"><div class="name">
-                <span class="a">A</span>le<span class="c">C</span> Lloy<span class="d">D</span> Pro<span class="b">B</span>ert
+                <span class="a">A</span>le<span class="c">C</span> Lloy<span class="d">D</span> Pro<span class="b">B</span>ert</a>
         </div></a>
     </div>
         
