--- a/touch_writer/touch_writer.html
+++ b/touch_writer/touch_writer.html
@@ -116,6 +116,9 @@
             <div id="ok"></div>
         </div>
 
+        <div id="up_counter"></div>
+        <div id="down_counter"></div>
+
     </section>
 
     <section id="translator"></section>
