--- a/touch_writer/touch_writer.html
+++ b/touch_writer/touch_writer.html
@@ -116,8 +116,12 @@
             <div id="ok"></div>
         </div>
 
+        <div id="left_counter"></div>
         <div id="up_counter"></div>
         <div id="down_counter"></div>
+        <div id="right_counter"></div>
+
+        <circle id="output_cursor"></circle>
 
     </section>
 
