--- a/touch_writer/touch_writer.html
+++ b/touch_writer/touch_writer.html
@@ -50,7 +50,7 @@
 
     
 
-    <section class="clavier">
+    <section class="clavier" id ="clavier">
 
         <div class="line" id="line_numbers">
             <div id="light">0</div>
@@ -121,7 +121,7 @@
         <div id="down_counter"></div>
         <div id="right_counter"></div>
 
-        <circle id="output_cursor"></circle>
+        <circle id="dummy" class="circles"></circle>
 
     </section>
 
