--- a/touch_writer/touch_writer.html
+++ b/touch_writer/touch_writer.html
@@ -32,6 +32,10 @@
 
     <p class="page_name">Graphieros TouchWriter</p>
 
+    <p class="sources"><a href="https://graphieros.com/php/glyphs.php" target="_blank">Lexique du graphieros</a></p><br>
+    <p class="sources"><a href="https://graphieros.com/lacle.pdf">Trouver la clé</a></p>
+    <br>
+
     <div id="erase_all">Réinitialiser</div>
     <div class="svg_container" id="svg_container">
     </div>
