--- a/touch_writer/touch_writer.html
+++ b/touch_writer/touch_writer.html
@@ -32,8 +32,9 @@
 
     <p class="page_name">Graphieros TouchWriter</p>
 
-    <p class="sources"><a href="https://graphieros.com/php/glyphs.php" target="_blank">Lexique du graphieros</a></p><br>
-    <p class="sources"><a href="https://graphieros.com/lacle.pdf">Trouver la clé</a></p>
+    <a href="touch_writer.mp4"><p class="sources">Le tutoriel video</p></a>
+    <a href="https://graphieros.com/php/glyphs.php" target="_blank"><p class="sources">Lexique du graphieros</p></a>
+    <a href="https://graphieros.com/lacle.pdf"><p class="sources">Trouver la clé</p></a>
     <br>
 
     <div id="erase_all">Réinitialiser</div>
