--- a/touch_writer/touch_writer.html
+++ b/touch_writer/touch_writer.html
@@ -132,6 +132,13 @@
 
     <section id="translator"></section>
 
+    <div id="link_caption"></div>
+    <section class="links">
+        <div class="link" id="link0"><span class="rotated">FRACTAL</span>WRITER</div>
+        <div class="link" id="link1"><span class="rotated">TYPE</span>WRITER</div>
+        <div class="link" id="link2">COMPOSER</div>
+    </section>
+
     <script src="touch_writer.js"></script>
 </body>
 </html>
